Bug 474559 - animation renders however renders as a corrupt file no matter what file extension is used
Summary: animation renders however renders as a corrupt file no matter what file exten...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.2.0-rc1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-15 15:37 UTC by unnameduwu458
Modified: 2023-09-22 06:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
corrupted render file preview (8.51 KB, image/png)
2023-09-15 15:37 UTC, unnameduwu458
Details
corrupted render file opened (49.30 KB, image/png)
2023-09-15 15:38 UTC, unnameduwu458
Details
the log generated besides the animation file (948 bytes, text/plain)
2023-09-19 15:21 UTC, unnameduwu458
Details
resend of the log (950 bytes, text/plain)
2023-09-19 15:23 UTC, unnameduwu458
Details

Note You need to log in before you can comment on or make changes to this bug.
Description unnameduwu458 2023-09-15 15:37:19 UTC
Created attachment 161641 [details]
corrupted render file preview

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

STEPS TO REPRODUCE
1. create a simple animation file
2. export video in mkv or mp4
3. check the output file that rendered

ADDITIONAL INFORMATION

animation renders however renders as a corrupt file no matter what file extension is used. results remain the same on all betas of 5.2 and the portable version, and just tried after updating to 5.2 rc1. have tried 5.1 beta and it worked fine. no crashing as of 5.2 rc1, renders successfully with no error prompts; however when opening the file it greets with an error msg saying that the following file is unsupported.

recording renders just fine last time i used it and so will render as GIF, however rendering animations does not render successfully. images attached.
Comment 1 unnameduwu458 2023-09-15 15:38:09 UTC
Created attachment 161642 [details]
corrupted render file opened
Comment 2 Dmitry Kazakov 2023-09-18 13:12:49 UTC
Hi, UnnamedUwu!

Could you please answer two questions? 

1) What version of ffmpeg do you use, the one packaged with Krita or something external?

2) Could you attach a log file that is generated alongside the corrupted video file?
Comment 3 unnameduwu458 2023-09-19 15:19:07 UTC
(In reply to Dmitry Kazakov from comment #2)
> Hi, UnnamedUwu!
> 
> Could you please answer two questions? 
> 
> 1) What version of ffmpeg do you use, the one packaged with Krita or
> something external?
> 
> 2) Could you attach a log file that is generated alongside the corrupted
> video file?

i use the external one, i don't know how to use the one packaged with krita. it's the essentials one
i'll attempt to eventually attach a log file in a bit
Comment 4 unnameduwu458 2023-09-19 15:21:11 UTC
Created attachment 161723 [details]
the log generated besides the animation file
Comment 5 unnameduwu458 2023-09-19 15:23:06 UTC
Created attachment 161724 [details]
resend of the log
Comment 6 Bug Janitor Service 2023-09-20 03:46:10 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 7 Dmitry Kazakov 2023-09-21 08:17:10 UTC
*** Bug 473603 has been marked as a duplicate of this bug. ***
Comment 8 Dmitry Kazakov 2023-09-21 08:18:03 UTC
Git commit 826d23c2e8f9e50e8d182e9a9be1e8d6c18b59cc by Dmitry Kazakov.
Committed on 21/09/2023 at 10:17.
Pushed by dkazakov into branch 'krita/5.2'.

Make sure that saved encoder settigns are supported by ffmpeg

When we load last-used-encoder setting we should make sure it is
matched to the list of supported encoders by FFMpeg, because the
user might have changed ffmpeg binary in the meantime.

M  +17   -5    libs/ui/animation/KisDlgAnimationRenderer.cpp
M  +1    -0    libs/ui/animation/KisDlgAnimationRenderer.h

https://invent.kde.org/graphics/krita/-/commit/826d23c2e8f9e50e8d182e9a9be1e8d6c18b59cc
Comment 9 Dmitry Kazakov 2023-09-21 08:18:59 UTC
Git commit 51fabc4b05726a22fa0d6dab140bb2218c93b9e8 by Dmitry Kazakov.
Committed on 21/09/2023 at 10:18.
Pushed by dkazakov into branch 'master'.

Make sure that saved encoder settigns are supported by ffmpeg

When we load last-used-encoder setting we should make sure it is
matched to the list of supported encoders by FFMpeg, because the
user might have changed ffmpeg binary in the meantime.

M  +17   -5    libs/ui/animation/KisDlgAnimationRenderer.cpp
M  +1    -0    libs/ui/animation/KisDlgAnimationRenderer.h

https://invent.kde.org/graphics/krita/-/commit/51fabc4b05726a22fa0d6dab140bb2218c93b9e8
Comment 10 unnameduwu458 2023-09-21 16:45:38 UTC
(In reply to Dmitry Kazakov from comment #9)
> Git commit 51fabc4b05726a22fa0d6dab140bb2218c93b9e8 by Dmitry Kazakov.
> Committed on 21/09/2023 at 10:18.
> Pushed by dkazakov into branch 'master'.
> 
> Make sure that saved encoder settigns are supported by ffmpeg
> 
> When we load last-used-encoder setting we should make sure it is
> matched to the list of supported encoders by FFMpeg, because the
> user might have changed ffmpeg binary in the meantime.
> 
> M  +17   -5    libs/ui/animation/KisDlgAnimationRenderer.cpp
> M  +1    -0    libs/ui/animation/KisDlgAnimationRenderer.h
> 
> https://invent.kde.org/graphics/krita/-/commit/
> 51fabc4b05726a22fa0d6dab140bb2218c93b9e8

how do i check that?
Comment 11 unnameduwu458 2023-09-21 16:52:52 UTC
nevermind i figured it out by tinkering with the encoder settings and setting baseline to main, it works now.
Comment 12 Dmitry Kazakov 2023-09-22 06:58:12 UTC
Hi, UnnamedUwu!

You can check the fixed build here: 
https://binary-factory.kde.org/job/Krita_Stable_Windows_Build/1987/