Make sure that saved encoder settigns are supported by ffmpeg

When we load last-used-encoder setting we should make sure it is
matched to the list of supported encoders by FFMpeg, because the
user might have changed ffmpeg binary in the meantime.

BUG:474559